# master

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt  TODO.txt  cleanup.sh  premake4.lua
boost-1.58.0/: README_HELP.txt
boost_1_66_0/: README_HELP.txt
cmake/: functions.cmake
data/Meshes/: monster_jetpack_003.mtl
data/Shaders/: per_fragment_color.frag  per_fragment_lighting_color.vert  per_fragment_lighting_texture.frag  per_fragment_texture.frag  per_fragment_texture.vert
data/Textures/: 20-brushed-seamless-texture.dds  ACRobePants.dds  ACRobeShirt.dds  ACswordsaber.dds  bluesparkles_COLOR.dds  cube.dds  images (1).dds  rustyblackmetal_COLOR.dds  stock-photo-red-christmas-texture-90859781_COLOR.dds  texture_uv_map_seat.dds
data/meshes/: altair.mtl  cube.mtl
data/shaders/: per_fragment_color.shader  per_fragment_color.vert  per_fragment_lighting_color.frag  per_fragment_lighting_color.shader  per_fragment_lighting_texture.shader  per_fragment_lighting_texture.vert  per_fragment_texture.shader
data/textures/: 2_COLOR.dds  ACboots.dds  ACgloves.dds  AChood.dds  ACshortsword.dds  default.dds  dirt.dds  mata.dds  rai.dds  texture_uv_map_controller.dds  texture_uv_map_frame.dds  texture_uv_map_mainjet.dds  texture_uv_map_pilot.dds  trak_rustybase_COLOR.dds
editors/physics/data/: aabb.res  client.net  controlling.wrld  controls_config.cfg  controls_contexts.cfg  filelist  files.fl  mesh.res  meshlist  rendering.res  resources.cfg  shaders.res  textures.cfg
editors/physics/include/: gameengine.hpp  physics.hpp
editors/physics/source/: gameengine.cpp  physics.cpp
games/chasers/data/: client.cfg  controls_contexts.cfg  filelist  resources.cfg  world.cfg
glew-1.11.0/: README_HELP.txt
gli/core/: load_dds.hpp  load_dds.inl
include/ai/: aimanager.hpp
include/audio/: soundmanager.hpp
include/base/: actor.hpp  actorcontrolcontroller.hpp  actorcontrolsresourcemanager.hpp  actorcreator.hpp  actorrendercontroller.hpp  actorrenderingresourcemanager.hpp  clientcontroller.hpp  controlactor.hpp  globalstructs.hpp  mesh.hpp  renderactor.hpp  resourcemanager.hpp  serveractor.hpp  servercontroller.hpp  worldloader.hpp  zone.hpp
include/context/: context.hpp  contextmanager.hpp  openglcontext.hpp
include/converters/: aabbconverter.hpp  meshconverter.hpp  obj.hpp
include/graphics/: globalstructs.hpp  imageloader.hpp  loadersmanager.hpp  renderer.hpp  shader.hpp  shaderloader.hpp  texture.hpp  textureloader.hpp  utilities.hpp  worldinfo.hpp
include/input/: commandevent.hpp  commandeventlistener.hpp  commandhandler.hpp  commandlistener.hpp  commandmessage.hpp  globalstructs.hpp  inputcontextmanager.hpp  inputmanager.hpp  keyboardevent.hpp  keyboardeventlistener.hpp  mouseevent.hpp  mouseeventlistener.hpp  rawmouseevent.hpp  rawmouseeventlistener.hpp  utils.hpp
include/network/: asyncserver.hpp  clientconnection.hpp  clienthandler.hpp  commandhandler.hpp  commandmessage.hpp  globalstructs.hpp  loginmessage.hpp  loginresponsemessage.hpp  networkmessage.hpp  serverconnection.hpp  serverhandler.hpp  updatemessage.hpp
include/physics/: aabb.hpp  physicsmanager.hpp
include/utils/: fileworker.hpp  utilities.hpp
include/windows/: entrypointeventhandler.hpp
source/ai/: aimanager.cpp
source/audio/: soundmanager.cpp
source/base/: actor.cpp  actorcontrolcontroller.cpp  actorcontrolsresourcemanager.cpp  actorcreator.cpp  actorrendercontroller.cpp  actorrenderingresourcemanager.cpp  clientcontroller.cpp  controlactor.cpp  mesh.cpp  renderactor.cpp  resourcemanager.cpp  serveractor.cpp  servercontroller.cpp  worldloader.cpp  zone.cpp
source/context/: context.cpp  contextmanager.cpp  openglcontext.cpp
source/converters/: aabbconverter.cpp  meshconverter.cpp  obj.cpp
source/graphics/: imageloader.cpp  loadersmanager.cpp  renderer.cpp  shader.cpp  shaderloader.cpp  texture.cpp  textureloader.cpp  utilities.cpp  worldinfo.cpp
source/input/: commandevent.cpp  commandhandler.cpp  commandlistener.cpp  inputcontextmanager.cpp  inputmanager.cpp  keyboardevent.cpp  mouseevent.cpp  rawmouseevent.cpp  utils.cpp
source/network/: asyncserver.cpp  clientconnection.cpp  clienthandler.cpp  commandhandler.cpp  commandmessage.cpp  loginmessage.cpp  loginresponsemessage.cpp  networkmessage.cpp  serverconnection.cpp  serverhandler.cpp  updatemessage.cpp
source/physics/: aabb.cpp  physicsmanager.cpp
source/utils/: fileworker.cpp  utilities.cpp
source/windows/: entrypointeventhandler.cpp
test/: CMakeLists.txt
test/ai/: CMakeLists.txt  aimanager.cpp
test/ai/data/: controlling.wrld  files.fl
test/audio/: CMakeLists.txt  soundmanager.cpp
test/audio/data/: filelist  files.fl
test/base/: CMakeLists.txt  actor.cpp  actorcontrolsresourcemanager.cpp  actorrenderingresourcemanager.cpp  renderactor.cpp  worldloader.cpp
test/base/data/: controlling.wrld  filelist  files.fl  meshlist  rendering.res  shaders.res  world.cfg
test/context/: CMakeLists.txt  context.cpp  contextmanager_and_openglcontext.cpp
test/converters/: CMakeLists.txt  aabbconverter.cpp  meshconverter.cpp
test/converters/data/: aabb.res  aabb_conversions.res  aabblist  filelist  files.fl  mesh.res  mesh_conversions.res  meshlist
test/graphics/: CMakeLists.txt  imageloader.cpp  loadersmanager.cpp  renderer.cpp  rendererandactorrenderingresourcemanager.cpp  rendererandtextures.cpp  shaderloader.cpp  textureloader.cpp
test/graphics/data/: filelist  files.fl  mesh.res  meshlist  rendering.res  resources.cfg  shaders.res  textures.cfg
test/input/: CMakeLists.txt  inputcontextmanager.cpp  inputmanager.cpp
test/input/data/: controls_config.cfg  filelist
test/network/: CMakeLists.txt  asyncserver.cpp  clienthandler.cpp  serverconnection.cpp  serverhandler.cpp
test/network/data/: client.cfg  client.net  controlling.wrld  filelist  files.fl  mesh.res  rendering.res  shaders.res  textures.res
test/physics/: CMakeLists.txt  aabbconverter.cpp
test/utils/: CMakeLists.txt  fileworker.cpp
test/utils/data/: filelist  files.fl  mesh.res  resources.res  shaders.cfg  shaders.res
(+4 files in other folders)
